manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld-techdocs-001
  name: helloworld-techdocs-001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-techdocs-001
  template:
    metadata:
      labels:
        app: helloworld-techdocs-001
    spec:
      containers:
      - image: quay.io/skitamur/hello-world:latest 
        name: helloworld-techdocs-001
        ports:
        - containerPort: 3000
          protocol: TCP
