manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-techdocs-001
  name: helloworld-techdocs-001
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: helloworld-techdocs-001
  type: ClusterIP
